# moveit

moveit_kinematics/: CMakeLists.txt  fabrik_kinematics_plugin_description.xml  package.xml
moveit_kinematics/fabrik_kinematics_plugin/: CMakeLists.txt
moveit_kinematics/fabrik_kinematics_plugin/include/moveit/fabrik_kinematics_plugin/: fabrik_kinematics_plugin.h  fabrik_model.h
moveit_kinematics/fabrik_kinematics_plugin/src/: fabrik_kinematics_plugin.cpp
moveit_planners/lerp/: CMakeLists.txt  package.xml
moveit_planners/lerp/include/: lerp_planning_context.h  model_based_planning_context.h
moveit_planners/lerp/launch/: lerp.launch
moveit_planners/lerp/src/: lerp_planner_manager.cpp  lerp_planning_context.cpp  model_based_planning_context.cpp  test_lerp.cpp
moveit_planners/trajopt/: CMakeLists.txt  package.xml
moveit_planners/trajopt/trajopt/include/trajopt/: collision_terms.h  kinematic_terms.h  problem_description.h
moveit_planners/trajopt/trajopt/src/: collision_terms.cpp  kinematic_terms.cpp  problem_description.cpp
moveit_planners/trajopt/trajopt_interface/: CMakeLists.txt  package.xml
moveit_planners/trajopt/trajopt_interface/include/trajopt_interface/: trajopt_interface.h  trajopt_planning_context.h
moveit_planners/trajopt/trajopt_interface/src/: trajopt_interface.cpp
moveit_setup_assistant/src/widgets/: configuration_files_widget.cpp
